third_party/rust/chromium_crates_io/vendor/num_enum-v0_7/tests/try_build/compile_fail/multiple_num_enum_defaults.stderr
error: Multiple variants marked `#[default]` or `#[num_enum(default)]` found
 --> $DIR/multiple_num_enum_defaults.rs:7:16
  |
7 |     #[num_enum(default)]
  |                ^^^^^^^
